[package]
name = "amplitude"
version = "0.1.0"
authors = ["arsenron <arsenron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.0", features = ["json", "stream"]}
serde = {version = "1.0.121", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dependencies.serde_with]
version = "1.6.1"
