[package]
name = "amplitude"
version = "0.1.0"
authors = ["arsenron <arsenron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.2", features = ["json"]}
serde = {version = "1.0.121", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0.23"
serde_with = "1.6.1"
chrono = "0.4"

[dev-dependencies]
tokio = { version = "0.2", features=["macros"] }

